--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,64 @@
 @import "tailwindcss";
-
+html,
+body {
+  font-family: "Pretendard", sans-serif;
+}
 :root {
   --background: #ffffff;
   --foreground: #171717;
 }
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+.jsh_ani.fadeIn.active,
+.jsh_ani.fadeInUp.active,
+.jsh_ani.fadeInDown.active {
+  opacity: 1;
+  transform: translate(0, 0);
+}
+.container {
+  max-width: 1290px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.right_link {
+  padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.jsh_ani.fadeIn {
+  opacity: 0;
+  transform: translateY(40px);
+  transition: opacity 1.2s ease, transform 1.2s ease;
+}
+
+.jsh_ani.fadeIn.active {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+@media (max-width: 1100px) {
+  .right_link {
+    padding-top: 20px;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+  .right_link li {
+    flex: 1;
+  }
+}
+@media (max-width: 748px) {
+  .right_link {
+    flex-direction: column;
+  }
 }
