--- a/src/components/header.css
+++ b/src/components/header.css
@@ -100,8 +100,8 @@ select {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 28px;
-  height: 20px;
+  width: 22px;
+  height: 17px;
   background: none;
   border: none;
   cursor: pointer;
@@ -111,8 +111,8 @@ select {
 
 .burger_button span {
   display: block;
-  height: 3px;
-  background-color: #000;
+  height: 1px;
+  background-color: #595959;
   border-radius: 2px;
 }
 
@@ -190,6 +190,13 @@ select {
 }
 
 @media (max-width: 1200px) {
+  .header_top {
+    padding: 0 20px;
+  }
+  .header_top .right_box {
+    margin-left: auto;
+    flex: 1;
+  }
   .header_logo {
     flex: 0 0 180px;
     max-width: 180px;
