--- a/src/components/header.css
+++ b/src/components/header.css
@@ -45,7 +45,6 @@ select {
   -webkit-appearance: none;
   -moz-appearance: none;
   text-indent: 1px;
-  text-overflow: "";
   color: inherit;
   background-color: #fff;
 }
@@ -118,17 +117,21 @@ select {
 
 /* 버거 메뉴 필드 */
 .burger_menu_field_container {
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
-  display: flex;
-  flex-direction: column;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 20;
   padding: 20px;
 }
+.burger_menu_field_container.active {
+  display: flex;
+  flex-direction: column;
+}
+
 .burger_menu_field {
   position: absolute;
   top: 0;
@@ -139,17 +142,20 @@ select {
   display: flex;
   align-items: center;
 }
+
 .burger_menu_field ul {
   display: flex;
   flex-direction: column;
   padding: 0 40px 120px;
 }
+
 .burger_menu_field ul li {
   padding: 5px 0;
   font-size: 2rem;
   color: #fff;
   font-weight: bold;
 }
+
 .burger_menu_field ul li,
 .burger_menu_field ul li a,
 .burger_menu_field select,
@@ -157,10 +163,10 @@ select {
   color: white !important;
 }
 
-/* select도 배경이 검정이어야 함 */
 .burger_menu_field select {
   background-color: black !important;
 }
+
 .burger_close_button {
   position: absolute;
   top: 20px;
@@ -174,15 +180,16 @@ select {
   z-index: 30;
   color: white;
 }
+
+/* 미디어 쿼리 */
 @media (min-width: 1101px) {
-  .burger_button,
-  .burger_menu_field {
+  .burger_button {
     display: none !important;
   }
 }
 
 @media (max-width: 1100px) {
-  .header_sub_nav,
+  .header_nav,
   .header_top:hover .header_sub_nav,
   .header_top .lang {
     display: none !important;
